Fix positioning of new item on mobile
Because apparently transform: translate on a parent breaks position: fixed completely????

Closes #16

--- a/lists/static/lists/lists.css
+++ b/lists/static/lists/lists.css
@@ -232,7 +232,7 @@ h2:hover .edit-button {
         transition: transform 300ms;
     }
     #body.show-list .list {
-        transform: translateX(0%);
+        transform: none;
         transition: transform 300ms;
     }
 
